tests/fails/f44.t

terra foo()
  ::a::
  ::a::
end
foo()
